2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Split service-type files into service-type and protocol files
	for better documentation. Update documentation.

	* libepc/protocol.c, libepc/protocol.h: Take over the EpcProtocol
	related functions of the service-type files. Update documentation.
	* libepc/service-type.c, libepc/service-type.h: Drop the EpcProtocol
	related functions. Update documentation.
	* Makefile.am: Add protocol.c and protocol.h

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Update documentation and add an error argument
	to epc_shell_create_avahi_client.

	* docs/reference/libepc/libepc-sections.txt: Updated symbols.
	* libepc/shell.c, libepc/shell.h: Document functions. Add error
	argument to epc_shell_create_avahi_client.
	* libepc/consumer.c, libepc/dispatcher.c, tests/framework.c:
	Pass error argument to epc_shell_create_avahi_client.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>

	Drop the shell's artificial Avahi client by keep the publisher's
	dispatcher arround. Implement name changes for the dispatcher.

	* libepc/dispatcher.c, libepc/dispatcher.h:
	Allow changing of name property.
	* libepc/publisher.c: Keep dispatcher arround and use its
	Avahi client ot lookup the host's official hostname.
	* libepc/shell.c, libepc/shell.h: Remove epc_shell_get_host_name.
	* Makefile.am, tests/.gitignore: Add test-dispatcher-rename and
	test-dispatcher-reset.
	* tests/framework.c, tests/framework.h: Print invokation location
	for epc_test_pass. Assert tests are passed only once. Restart the
	timeout when a test passes.
	* tests/test-publisher-change-name.c: First call epc_test_pass,
	then change the name by calling epc_publisher_set_service_name.
	* tests/test-dispatcher-rename.c: Verify that epc_dispatcher_set_name
	removes the old mame.
	* tests/test-dispatcher-reset.c: Verify that epc_dispatcher_set_reset
	removes the old mame.

2007-11-12  Mathias Hasselmann  <mathias@openismus.com>
