@@ -38,7 +38,6 @@
       </para>
     </legalnotice>
 
-
     <abstract>
       <para>
         The Easy Publish and Consume library provides an easy method to
@@ -57,7 +56,13 @@
     <title>Public API</title>
     <xi:include href="xml/publisher.xml"/>
     <xi:include href="xml/consumer.xml"/>
+    <xi:include href="xml/protocol.xml"/>
     <xi:include href="xml/service-type.xml"/>
+
+    <para>
+     This objects and functions define the public API
+     of the Easy Publish and Consume library.
+    </para>
   </chapter>
 
   <chapter id="utilities">
@@ -65,7 +70,10 @@
     <xi:include href="xml/dispatcher.xml"/>
     <xi:include href="xml/shell.xml"/>
     <xi:include href="xml/tls.xml"/>
-  </chapter>
 
-  <index id="symbol-index"/>
+    <para>
+     The objects and functions listed in this chapter
+     are indented for internal library use only.
+    </para>
+  </chapter>
 </book>
